# prulko

./: .gitignore  CMakeLists.txt  README_HOWTO_COMPILE.txt  all_lib_device.cmake  build_all.bat  build_all.sh  build_ddr_debug.bat  build_ddr_debug.sh  build_ddr_release.bat  build_ddr_release.sh  build_flash_debug.bat  build_flash_debug.sh  build_flash_release.bat  build_flash_release.sh  config.cmake  flags.cmake  ide_overrides.cmake  mcux_config.cmake  mcux_include.json
board/: board.c  board.h  clock_config.c  pin_mux.c  pin_mux.h
board/debix/: pin_mux_debix.c
board/kobus/: pin_mux_kobus.c
component/lists/: component_lists.MIMX8ML8.cmake
component/uart/: component_iuart_adapter.MIMX8ML8.cmake
device/: device_MIMX8ML8_CMSIS.MIMX8ML8.cmake  device_MIMX8ML8_system.MIMX8ML8.cmake
drivers/: driver_audiomix.MIMX8ML8.cmake  driver_clock.MIMX8ML8.cmake  driver_common.MIMX8ML8.cmake  driver_ecspi.MIMX8ML8.cmake  driver_gpt.MIMX8ML8.cmake  driver_igpio.MIMX8ML8.cmake  driver_iuart.MIMX8ML8.cmake  driver_rdc.MIMX8ML8.cmake
source/: main.c
source/adc/: adc.h  ads8028.c  ads8028.h
source/adc/debix/: adc_debix.c  adc_debix_hw.h
source/adc/kobus/: adc_kobus.c
source/digitals/: digitals.c  digitals.h
source/digitals/debix/: digitals_debix.c
source/digitals/kobus/: digitals_kobus.c
source/frequency/: ring_buffer.c  ring_buffer.h
source/timer/: cycle_timer.c  cycle_timer.h
startup/: device_MIMX8ML8_startup.MIMX8ML8.cmake
utilities/: utility_assert_lite.MIMX8ML8.cmake  utility_debug_console_lite.MIMX8ML8.cmake
